alignment issues fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,20 @@
+html{
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+    box-sizing: border-box;
+}
 body {
     /*background-color: LightGray;*/
     font-family: 'Roboto', sans-serif;
     -webkit-font-smoothing: antialiased;
 }
-div {
-    /*border: 1px solid Chocolate;*/
-}
+/*div {
+    border: 1px solid Chocolate;
+}*/
 .content {
 	/*width: 30rem;*/
 	padding: 0 0.938rem;
@@ -38,6 +47,7 @@ ul {
 }
 .top-navigation .logo {
     height: 4.375rem;
+    float: left;
  }
 .top-navigation .links {
 	float:right;
@@ -99,12 +109,12 @@ button {
 	overflow: hidden;
 	padding-bottom: 5rem;
 }
-.cases .content {
+/*.cases .content {
     margin-top: 7.875rem;
     padding: none;
     color: #1d1e21;
     text-align: center;
-}
+}*/
 .cases h2 {
     font-size: 2.75rem;
     margin: 1.625rem 0 3.125rem;
@@ -112,16 +122,19 @@ button {
     color: #1d1e21;
 }
 .cases .devices {
-    width: 37.5rem;
+    width: 100%;
     display: inline-block;
     /* styles to assist with debugging */
     /*border: 1px solid black;*/
     box-sizing: border-box;
     height: 4em;
+    margin: 0;
+    padding: 0;
 }
 .cases .devices > li {
-    width: 33.3333333%;
-    float:left;
+    /*width: 33.3333333%;*/
+    display: inline-block;
+    padding: 0 3rem;
 }
 /*footer*/
 .social {
@@ -129,6 +142,9 @@ button {
     overflow: auto;
     padding-bottom: 9.375rem;
     text-align: center;
+}
+i {
+    margin-top: 0.6rem;
 }
 .social hr {
     border: 0;
@@ -140,7 +156,7 @@ button {
     width: 2.5rem;
     height: 2.5rem;
     display: inline-block;
-    margin: 1.25rem 1.25rem;
+    margin: 1.25rem 5px;
     border: 1px solid #eaebec;
     padding: 0 0;
     text-align: center;
